<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFF2FC"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_above="@+id/key"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/linear1"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"/>
            <TextView
                android:id="@+id/tvEnter"
                android:layout_width="0dp"
                android:layout_weight="2.5"
                android:textSize="20dp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:maxLines="5"
                android:background="@drawable/text_background"
                android:padding="5dp"
                android:focusable="false"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"/>
            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_weight="2.5"
                android:layout_height="wrap_content"
                android:background="@drawable/text_background"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:padding="5dp"
                />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/key"
        android:paddingVertical="7dp"
        android:paddingHorizontal="3dp"
        android:background="@drawable/custom_linear"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="3dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_ac"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ac"/>

            <Button
                android:id="@+id/button_0"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_0"/>

            <Button
                android:id="@+id/button_1"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_1"/>

            <Button
                android:id="@+id/button_2"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_2"/>

            <Button
                android:id="@+id/button_3"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_3"/>

        </LinearLayout>
        <LinearLayout
            android:layout_marginBottom="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_4"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_4"/>

            <Button
                android:id="@+id/button_5"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_5"/>

            <Button
                android:id="@+id/button_6"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_6"/>

            <Button
                android:id="@+id/button_7"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_7"/>

            <Button
                android:id="@+id/button_8"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_8"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginBottom="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_9"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_9"/>

            <Button
                android:id="@+id/button_A"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/a"/>

            <Button
                android:id="@+id/button_B"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/b"/>

            <Button
                android:id="@+id/button_C"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/c"/>

            <Button
                android:id="@+id/button_D"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/d"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_E"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/e"/>
            <Button
                android:id="@+id/button_F"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/f"/>
            <Button
                android:id="@+id/button_dot"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="."/>


            <Button
                android:id="@+id/button_delete"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/delete"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>